[tool.poetry]
name = "play_ground"
version = "0.1.0"
description = ""
authors = ["steveball11 <studentsteve11@gmail.ocm>"]

[tool.poetry.dependencies]
python = "^3.9"
psychrochart = "^0.3.1"
ipykernel = "^6.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
